--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -40,7 +40,9 @@
     </activity>
         <activity
             android:name="com.leonproject.antelope2.RaceListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize" >
         </activity>
         <activity
             android:name="com.leonproject.antelope2.RaceDetailActivity"
